Add html and table templates.

--- a/resources/templates/calendar.html
+++ b/resources/templates/calendar.html
@@ -2,18 +2,44 @@
 <html>
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title></title>
+<title>{{title}}</title>
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="author" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- <link rel="stylesheet" href=""> -->
+<link rel="stylesheet" href="">
 <!--[if lt IE 9]>
 <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
-<!-- <link rel="shortcut icon" href="">-- >
+<link rel="shortcut icon" href="">
 </head>
 <body>
+<!-- Place your content here -->
+<!-- SCRIPTS -->
+<!-- Example: <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
+<table >
+  <tbody>
+    <tr>
+      <th colspan="7">{{month}}</th>
+    </tr>
+    <tr>
+      <td>日</td>
+      <td>月</td>
+      <td>火</td>
+      <td>水</td>
+      <td>木</td>
+      <td>金</td>
+      <td>土</td>
+    </tr>
+    {% for w in weeks %}
+    <tr>
+      {% for m in w %}
+      <td>{{m}}</td>
+      {% endfor %}
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
 </body>
 </html>
